# loggings

./: README.md  metadata.yml  pyproject.toml
src/: __init__.py  core.py
src/loggings/: __init__.py  core.py
